# pico-rio

./: .gitignore  Cargo.toml  README.md  build.sh
assets/: bill-of-materials.csv
diagrams/: tasks.drawio
kicad/: circuit.kicad_prl  circuit.kicad_pro  circuit.kicad_sch  pico-rio.kicad_sym  sym-lib-table  system.kicad_prl  system.kicad_pro  system.kicad_sch
messages/: Cargo.toml
messages/src/: lib.rs
pico/: .lazy.lua  Cargo.toml  rust-toolchain.toml
pico/.cargo/: config.toml
pico/src/: analog_in.rs  analog_out.rs  bang_bang.rs  bar_graph.rs  command.rs  digital_in.rs  digital_out.rs  dispatcher.rs  display.rs  inbound.rs  mailbox.rs  main.rs  measurements.rs  network.rs  notification.rs  outbound.rs  timer.rs  usb.rs  watchdog.rs
pico/src/application/: mod.rs  none.rs  water_tank.rs
pico/src/applications/: mod.rs  water_tank.rs
pico/src/display/: device.rs  mod.rs  screen.rs
pico/src/sequencer/: execution.rs  mod.rs  types.rs
src/: main.rs
tools/: Cargo.toml
tools/src/: instruction.rs  lib.rs  logger.rs  network.rs
