[package]
name = "pico-rio"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embassy-usb-host = { version = "0.1.0", features = ["defmt"] }
embassy-usb-driver = { version = "0.2.0" }
embassy-net = { version = "0.9.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4-hostname", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast", "mdns"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-usb-logger = { version = "0.6.0" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
display-interface = "0.5.0"
embedded-graphics = "0.8.1"
heapless = { version = "0.9", features = ["serde"] }
ssd1306 = { version = "0.10.0", features = ["async"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"

# for dhcp server
leasehund = { version = "0.4.0", features = ["defmt"] }

# message serialization
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
postcard = { version = "1.1" }

# commands and messages
messages = { version = "0.1.0", path = "../messages" }

[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/rp" }
]
