[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"]}

# message serialization
postcard = { version = "1.1" }
heapless = { version = "0.9.3", features = ["serde"]}
serde = { version = "1.0.203", default-features = false, features = ["derive"] }

messages = { version = "0.1.0", path = "../messages" }
